--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -19,7 +19,7 @@
 {% block navbar %} {% endblock %}
   <div class="container py-3">
 
-    <div>
+    <div class="flash-messages">
       {% with messages = get_flashed_messages(with_categories=true) %}
         {% if messages %}
           {% for category, message in messages %}
